--- a/dev.html
+++ b/dev.html
@@ -107,5 +107,52 @@
     </div>
     </section> 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <footer class="footer">
+        <div class="footer-div">
+            <ul class="footer-list-one">
+                <li>
+                    <p href="./index.html" class="footer-main">Joi</p>
+               </li>
+               <li class="list-item"><mark class="mark1">Dynamic, versatile</mark> AI models in sight.
+               </li>
+               <li>
+                <div class="footer-img-list">
+                    <a href="https://discord.com/" class="footer-img" target="blank"> <img src="./igm/logo-discord.svg" alt="" class="footer-img"></a>
+                    <a href="https://www.facebook.com/" class="footer-img" target="blank"> <img src="./igm/logo-social-media-facebook-circle.svg" alt="" class="footer-img"></a>
+                    <a href="https://www.instagram.com/?hl=en%22" class="footer-img" target="blank"> <img src="./igm/logo-social-media-instagram.svg" alt="" class="footer-img"></a>
+                    <a href="https://x.com/" class="footer-img" target="blank"> <img src="./igm/logo-twitter.svg" alt="" class="footer-img"></a>
+        
+                </div>
+               </li>
+            </ul>
+            <div class="footer-wrapper">
+            <ul class="footer-list2">
+                <li class="list-header"><p>Pages</p></li>
+                <li class="list-item">Style guide</li>
+                <li class="list-item">Protected</li>
+                <li class="list-item">Licenses</li>
+                <li class="list-item">Changelog</li>
+                <li class="list-item">404</li>
+            </ul>
+            <ul class="footer-list3">
+                <li class="list-header"><p>Explore</p></li>
+                <li class="list-item">About us</li>
+                <li class="list-item">Recent blog</li>
+                <li class="list-item">Pricing plan</li>
+                <li class="list-item">Our projects</li>
+                <li class="list-item">Contact us</li>
+            </ul>
+            <ul class="footer-list4">
+                <li class="list-header"><p>Contact</p></li>
+                <li class="list-item">Musterstraße 3a</li>
+                <li class="list-item">contact@joi.com</li>
+                <li  class="list-item">(123) 456 - 7890</li>
+            </ul>
+        </div>
+        </div>
+        <div class="footer-copyright">
+            <p>Copyright © JOI | Designed by <span class="mark1">Erik Eriksson</span>  Templates - Powered by <span class="footer-span">(insert favourite company)</span></p>
+        </div>
+    </footer>
 </body>
 </html>
