--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <img src="./igm/paginator2.png" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="./igm/pexels-luis-gomes-166706-546819.jpg" class="d-block w-100" alt="...">
+            <img src="./igm/paginator33.png" class="d-block w-100" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
