--- a/nodirectory.html
+++ b/nodirectory.html
@@ -53,9 +53,9 @@
             <img src="./igm/Vector.png" alt="" class="header-img">
         </div>
         </header>
-    <div>
-     <p>Chasing dead ends?</p>
-     <p>Nothing to see here - yet. </p>
+    <div class="deadend-wrapper">
+     <p class="deadend-para1 deadend-para">Chasing dead ends?</p>
+     <p class="deadend-para2 deadend-para">Nothing to see here - yet. </p>
     </div>
 </body>
 </html>
