--- a/index.html
+++ b/index.html
@@ -138,11 +138,11 @@
         <div class="footer-wrapper">
         <ul class="footer-list2">
             <li class="list-header"><p>Pages</p></li>
-            <li class="list-item">Style guide</li>
-            <li class="list-item">Protected</li>
-            <li class="list-item">Licenses</li>
-            <li class="list-item">Changelog</li>
-            <li class="list-item">404</li>
+            <li class="list-item"><a href="./nodirectory.html" class="deadend-link">Style guide</a></li>
+            <li class="list-item"><a href="./nodirectory.html" class="deadend-link">Protected</a></li>
+            <li class="list-item"><a href="./nodirectory.html" class="deadend-link">Licenses</a></li>
+            <li class="list-item"><a href="./nodirectory.html" class="deadend-link">Changelog</a></li>
+            <li class="list-item"><a href="./nodirectory.html" class="deadend-link">404</a></li>
         </ul>
         <ul class="footer-list3">
             <li class="list-header"><p>Explore</p></li>
