--- a/dev.html
+++ b/dev.html
@@ -101,7 +101,7 @@
 
            <div class="about-wrapper5">
             <h1 class="wrapper5-para">GitHub account:</h1>
-            <a href="https://github.com/Mel-b3002fA" class="wrapper5-link">Erik Eriksson</a>
+            <a href="https://github.com/Mel-b3002fA" class="wrapper5-link" target="_blank">Erik Eriksson</a>
            </div>
         </div>
     </div>
