--- a/index.html
+++ b/index.html
@@ -146,11 +146,11 @@
         </ul>
         <ul class="footer-list3">
             <li class="list-header"><p>Explore</p></li>
-            <li class="list-item">About us</li>
-            <li class="list-item">Recent blog</li>
-            <li class="list-item">Pricing plan</li>
-            <li class="list-item">Our projects</li>
-            <li class="list-item">Contact us</li>
+            <li class="list-item"><a href="./nodirectory.html" class="deadend-link">About us</a></li>
+            <li class="list-item"><a href="./nodirectory.html" class="deadend-link">Recent blog</a></li>
+            <li class="list-item"><a href="./nodirectory.html" class="deadend-link">Pricing plan</a></li>
+            <li class="list-item"><a href="./nodirectory.html" class="deadend-link">Our projects</a></li>
+            <li class="list-item"><a href="./nodirectory.html" class="deadend-link">Contact us</a></li>
         </ul>
         <ul class="footer-list4">
             <li class="list-header"><p>Contact</p></li>
