--- a/contact.html
+++ b/contact.html
@@ -144,28 +144,28 @@
                </li>
             </ul>
             <div class="footer-wrapper">
-            <ul class="footer-list2">
-                <li class="list-header"><p>Pages</p></li>
-                <li class="list-item">Style guide</li>
-                <li class="list-item">Protected</li>
-                <li class="list-item">Licenses</li>
-                <li class="list-item">Changelog</li>
-                <li class="list-item">404</li>
-            </ul>
-            <ul class="footer-list3">
-                <li class="list-header"><p>Explore</p></li>
-                <li class="list-item">About us</li>
-                <li class="list-item">Recent blog</li>
-                <li class="list-item">Pricing plan</li>
-                <li class="list-item">Our projects</li>
-                <li class="list-item">Contact us</li>
-            </ul>
-            <ul class="footer-list4">
-                <li class="list-header"><p>Contact</p></li>
-                <li class="list-item">Musterstraße 3a</li>
-                <li class="list-item">contact@joi.com</li>
-                <li  class="list-item">(123) 456 - 7890</li>
-            </ul>
+                <ul class="footer-list2">
+                    <li class="list-header"><p>Pages</p></li>
+                    <li class="list-item"><a href="./nodirectory.html" class="deadend-link">Style guide</a></li>
+                    <li class="list-item"><a href="./nodirectory.html" class="deadend-link">Protected</a></li>
+                    <li class="list-item"><a href="./nodirectory.html" class="deadend-link">Licenses</a></li>
+                    <li class="list-item"><a href="./nodirectory.html" class="deadend-link">Changelog</a></li>
+                    <li class="list-item"><a href="./nodirectory.html" class="deadend-link">404</a></li>
+                </ul>
+                <ul class="footer-list3">
+                    <li class="list-header"><p>Explore</p></li>
+                    <li class="list-item"><a href="./nodirectory.html" class="deadend-link">About us</a></li>
+                    <li class="list-item"><a href="./nodirectory.html" class="deadend-link">Recent blog</a></li>
+                    <li class="list-item"><a href="./nodirectory.html" class="deadend-link">Pricing plan</a></li>
+                    <li class="list-item"><a href="./nodirectory.html" class="deadend-link">Our projects</a></li>
+                    <li class="list-item"><a href="./nodirectory.html" class="deadend-link">Contact us</a></li>
+                </ul>
+                <ul class="footer-list4">
+                    <li class="list-header"><p>Contact</p></li>
+                    <li class="list-item"><a href="./nodirectory.html" class="deadend-link">Musterstraße 3a</a></li>
+                    <li class="list-item"><a href="./nodirectory.html" class="deadend-link">contact@joi.com</a></li>
+                    <li  class="list-item"><a href="./nodirectory.html" class="deadend-link">(123) 456 - 7890</a></li>
+                </ul>
         </div>
         </div>
         <div class="footer-copyright">
