--- a/index.html
+++ b/index.html
@@ -154,9 +154,9 @@
         </ul>
         <ul class="footer-list4">
             <li class="list-header"><p>Contact</p></li>
-            <li class="list-item">Musterstraße 3a</li>
-            <li class="list-item">contact@joi.com</li>
-            <li  class="list-item">(123) 456 - 7890</li>
+            <li class="list-item"><a href="./nodirectory.html" class="deadend-link">Musterstraße 3a</a></li>
+            <li class="list-item"><a href="./nodirectory.html" class="deadend-link">contact@joi.com</a></li>
+            <li  class="list-item"><a href="./nodirectory.html" class="deadend-link">(123) 456 - 7890</a></li>
         </ul>
     </div>
     </div>
