--- a/nodirectory.html
+++ b/nodirectory.html
@@ -76,10 +76,10 @@
         </div>
         </header>
 
-        <section>
+        <section class="deadend">
            <div class="deadend-wrapper">
              <p class="deadend-para1 deadend-para">Chasing dead ends?</p>
-             <p class="deadend-para2 deadend-para">Nothing to see here - yet. </p>
+             <p class="deadend-para2 deadend-para">Nothing to see here - yet.</p>
            </div>
        </section>
 </body>
