--- a/blog.html
+++ b/blog.html
@@ -71,6 +71,9 @@
             <img src="./igm/Vector.png" alt="" class="header-img">
         </div>
         </header>
+       
+        <section class="blog"></section>
+
         <footer class="footer">
             <div class="footer-div">
                 <ul class="footer-list-one">
