--- a/deployment.html
+++ b/deployment.html
@@ -74,6 +74,22 @@
         </div>
         </header>
 
+
+        <section class="grid">
+            <div class="grid-wrapper">
+               <div class="grid-items grid-item1"><img src="./igm/page1.png" alt="" class="grid-img1"></div>
+               <div class="grid-items grid-item2"></div>
+               <div class="grid-items grid-item3"></div>
+               <div class="grid-items grid-item4"></div>
+               <div class="grid-items grid-item5"></div>
+               <div class="grid-items grid-item6"></div>
+               <div class="grid-items grid-item7"></div>
+               <div class="grid-items grid-item8"></div>
+               <div class="grid-items grid-item9"></div>
+               <div class="grid-items grid-item10"></div>
+            </div>
+        </section>
+
         <footer class="footer">
             <div class="footer-div">
                 <ul class="footer-list-one">
