--- a/deployment.html
+++ b/deployment.html
@@ -25,7 +25,7 @@
 <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="./main.js">
 </head>
-<body>
+<body class="model-body">
     <header class="header"> 
         <div class="header-wrapper">
     
@@ -78,7 +78,7 @@
         <section class="grid">
             <div class="grid-wrapper">
                <div class="grid-items grid-item1"><img src="./igm/page1.png" alt="" class="grid-img1"></div>
-               <div class="grid-items grid-item2"></div>
+               <div class="grid-items grid-item2"><p class="grid-para1">hello there</p></div>
                <div class="grid-items grid-item3"></div>
                <div class="grid-items grid-item4"></div>
                <div class="grid-items grid-item5"></div>
