--- a/deployment.html
+++ b/deployment.html
@@ -39,5 +39,7 @@
 <img src="./igm/Vector.png" alt="" class="header-img">
     </div>
     </header>
+    <section></section>
+    <footer></footer>
 </body>
 </html>
