--- a/blog.html
+++ b/blog.html
@@ -24,17 +24,17 @@
     <link rel="stylesheet" href="./blog.css">
 </head>
 <body>
-    <header class="header"> 
-        <div class="header-wrapper">
-            <a href="./index.html" class="header-main">Joi</a>
-        <ul class="header-list">
-            <li class="header-list-item"><a href="./about.html">About</a></li>
-            <li class="header-list-item"><a href="./contact.html">Contact</a></li>
-            <li class="header-list-item"><a href="./blog.html">Blog</a></li>
-            <li class="header-list-item"><a href="./deployment.html">Deployment</a></li>
+    <header class="blog-header header"> 
+        <div class="blog-header-wrapper header-wrapper">
+            <a href="./index.html" class="blog-header-main header-main">Joi</a>
+        <ul class="blog-header-list header-list">
+            <li class="header-list-item blog-header-list-item"><a href="./about.html">About</a></li>
+            <li class="header-list-item blog-header-list-item"><a href="./contact.html">Contact</a></li>
+            <li class="header-list-item blog-header-list-item"><a href="./blog.html">Blog</a></li>
+            <li class="header-list-item blog-header-list-item"><a href="./deployment.html">Deployment</a></li>
         </ul>
-        <p class="header-para"><a href="./dev.html">Developer</a></p>
-<img src="./igm/Vector.png" alt="" class="header-img">
+        <p class="header-para blog-header-para"><a href="./dev.html">Developer</a></p>
+<img src="./igm/Vector.png" alt="" class="header-img blog-header-img">
     </div>
     </header>
 </body>
