--- a/blog.html
+++ b/blog.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="./blog.css">
 </head>
 <body>
-    <header class="blog-header header"> 
+   <!--  <header class="blog-header header"> 
         <div class="blog-header-wrapper header-wrapper">
             <a href="./index.html" class="blog-header-main header-main">Joi</a>
         <ul class="blog-header-list header-list">
@@ -36,7 +36,7 @@
         <p class="header-para blog-header-para"><a href="./dev.html">Developer</a></p>
 <img src="./igm/Vector.png" alt="" class="header-img blog-header-img">
     </div>
-    </header>
+    </header> -->
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
