--- a/blog.html
+++ b/blog.html
@@ -71,19 +71,8 @@
             <img src="./igm/Vector.png" alt="" class="header-img">
         </div>
         </header>
-   <!--  <header class="blog-header header"> 
-        <div class="blog-header-wrapper header-wrapper">
-            <a href="./index.html" class="blog-header-main header-main">Joi</a>
-        <ul class="blog-header-list header-list">
-            <li class="header-list-item blog-header-list-item"><a href="./about.html">About</a></li>
-            <li class="header-list-item blog-header-list-item"><a href="./contact.html">Contact</a></li>
-            <li class="header-list-item blog-header-list-item"><a href="./blog.html">Blog</a></li>
-            <li class="header-list-item blog-header-list-item"><a href="./deployment.html">Deployment</a></li>
-        </ul>
-        <p class="header-para blog-header-para"><a href="./dev.html">Developer</a></p>
-<img src="./igm/Vector.png" alt="" class="header-img blog-header-img">
-    </div>
-    </header> -->
+    <section></section>
+    <footer></footer>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
