--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     </div>
     </div>
     <div class="footer-copyright">
-        <p class="copyright">Copyright 2025 © JOI | Designed by <span class="mark1">Erik Eriksson</span>  Templates - Powered by <span class="footer-span">(insert favourite company)</span></p>
+        <p class="copyright-para">Copyright 2025 © JOI | Designed by <span class="mark1">Erik Eriksson</span>  Templates - Powered by <span class="footer-span">(insert favourite company)</span></p>
     </div>
 </div>
 </footer>
