--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
         <img src="./igm/Vector.png" alt="" class="header-img">
     </div>
     </header>
+
     <section class="landing">
  <h1 class="landing-main">Make adaptive, user- <br>friendly AI models accessible - for everyone . </h1>
     <p class="landing-para">We assist you in <mark class="mark1"> enhancing your projects</mark>  by providing creative thinking, analytical and problem-solving skills, in-depth understanding and meaningful conversations, as well as personalized support tailored to your specific needs.</p>
@@ -89,6 +90,7 @@
 <img src="./igm/Content Files Pencil Ruler.svg" alt="" class="cup">
 </div>
 </section>
+
 <section class="carousel-section">
     <div id="carouselExampleIndicators" class="carousel slide">
         <div class="carousel-indicators">
@@ -117,6 +119,18 @@
         </button>
       </div>
 </section>
+
+<section class="homegrid">
+   <div class="homegrid-container">
+    <div class="homegrid-items"></div>
+    <div class="homegrid-items"></div>
+    <div class="homegrid-items"></div>
+    <div class="homegrid-items"></div>
+    <div class="homegrid-items"></div>
+    <div class="homegrid-items"></div>
+   </div>
+</section>
+
 <footer class="footer">
     <div class="footer-wrap">
     <div class="footer-div">
