--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
 
 <section class="homegrid">
    <div class="homegrid-container">
-    <div class="homegrid-items"></div>
-    <div class="homegrid-items"></div>
+    <div class="homegrid-items"><p class="homegrid-para"></p></div>
+    <div class="homegrid-items"><p class="homegrid-para"></p></div>
     <div class="homegrid-items"></div>
     <div class="homegrid-items"></div>
     <div class="homegrid-items"></div>
