--- a/index.html
+++ b/index.html
@@ -135,11 +135,13 @@
     <div class="footer-wrap">
     <div class="footer-div">
          <ul class="footer-list-one">
+            <div class="footer-joi">
             <li>
                 <p href="./index.html" class="footer-main">Joi</p>
            </li>
            <li class="list-item"><mark class="mark1">Dynamic, versatile</mark> AI models in sight.
            </li>
+        </div>
            <li>
             <div class="footer-img-list">
                 <a href="https://discord.com/" class="footer-img" target="blank"> <img src="./igm/logo-discord.svg" alt="" class="footer-img"></a>
