--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
          <ul class="footer-list-one">
             <li class="footer-list-item1">
                 <p href="./index.html" class="footer-main">Joi</p>
-                <mark class="mark1">Dynamic, versatile</mark> AI models in sight.
+                <p class="footer-main-para"><mark class="mark1">Dynamic, versatile</mark> AI models in sight.</p>
            </li>
            <li>
             <div class="footer-img-list">
