--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@
    <div class="homegrid-container">
     <div class="homegrid-items"><p class="homegrid-para"></p></div>
     <div class="homegrid-items"><p class="homegrid-para"></p></div>
-    <div class="homegrid-items"></div>
-    <div class="homegrid-items"></div>
-    <div class="homegrid-items"></div>
-    <div class="homegrid-items"></div>
+    <div class="homegrid-items"><p class="homegrid-para"></p></div>
+    <div class="homegrid-items"><p class="homegrid-para"></p></div>
+    <div class="homegrid-items"><p class="homegrid-para"></p></div>
+    <div class="homegrid-items"><p class="homegrid-para"></p></div>
    </div>
 </section>
 
