--- a/contact.html
+++ b/contact.html
@@ -125,7 +125,7 @@
         });
       </script> -->
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-      <footer class="footer">
+      <footer class="footer footer-contact">
         <div class="footer-div">
             <ul class="footer-list-one">
                 <li>
