--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <link rel="stylesheet" href="./styles.css">
 <link rel="stylesheet" href="./main.js">
 </head>
-<body>
+<body class="body-main">
     <header class="header"> 
     <div class="header-wrapper">
 
