--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
 <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="./main.js">
 </head>
-<body>
+<body class="body-about">
     <header class="header"> 
         <div class="header-wrapper">
     
