--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <body class="body-main">
     <header class="header"> 
     <div class="header-wrapper">
-
+        <div class="wrapper11">
             <a href="./index.html" class="header-main">Joi</a>
         <ul class="header-list">
             <li class="header-list-item"><a href="./about.html" class="about-link">About</a></li>
@@ -40,6 +40,8 @@
             <li class="header-list-item"><a href="./blog.html" class="blog-link">Blog</a></li>
             <li class="header-list-item"><a href="./deployment.html" class="depl-link">Models</a></li>
         </ul>
+      </div>
+      <div class="wrapper22">
         <form class="color-picker"
         action="">
             <fieldset class="fieldset">
@@ -73,8 +75,11 @@
                    
             </fieldset>
         </form>
+        <div class="div-wrap">
         <p class="header-para"><a href="./dev.html" class="dev-link">Developer</a></p>
-        <img src="./igm/Vector.png" alt="" class="header-img">
+        <div><img src="./igm/Vector.png" alt="" class="header-img"></div>
+      </div>
+      </div>
     </div>
     </header>
 
