--- a/blog.html
+++ b/blog.html
@@ -23,7 +23,7 @@
 
 
 <link rel="stylesheet" href="./styles.css">
-    <link rel="stylesheet" href="./blog.css">
+<!--     <link rel="stylesheet" href="./blog.css"> -->
 </head>
 <body>
     <header class="header"> 
