--- a/blog.html
+++ b/blog.html
@@ -73,7 +73,13 @@
             <img src="./igm/Vector.png" alt="" class="header-img">
         </div>
         </header>
-    <section></section>
+    <section class="pins">
+        <div class=”pin_container”>
+            <div class=”card card_small”></div>
+            <div class=”card card_medium”></div>
+            <div class=”card card_large”></div>
+           </div>
+    </section>
     <footer></footer>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
