--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
         </ul>
       </div>
       <div class="wrapper22">
-        <form class="color-picker"
+        <div>
+          <form class="color-picker"
         action="">
             <fieldset class="fieldset">
                 <div class="checkbox-wrapper">
@@ -74,8 +75,9 @@
                 </div>
                    
             </fieldset>
-        </form>
-        <div class="div-wrap">
+          </form>
+        </div>
+      <div class="div-wrap">
         <p class="header-para"><a href="./dev.html" class="dev-link">Developer</a></p>
         <div><img src="./igm/Vector.png" alt="" class="header-img"></div>
       </div>
