--- a/deployment.html
+++ b/deployment.html
@@ -73,7 +73,13 @@
             <img src="./igm/Vector.png" alt="" class="header-img">
         </div>
         </header>
-    <section></section>
+    <section>
+        <ul>
+            <li><button class="btn-1"><a href="./chat.html" class="convers-btn">Begin a conversation</a><img src="./igm/Group (2).png" alt="" class="group2"></button></li>
+            <li><button class="btn-1"><a href="./chat.html" class="convers-btn">Begin a conversation</a><img src="./igm/Group (2).png" alt="" class="group2"></button>            </li>
+            <li><button class="btn-1"><a href="./chat.html" class="convers-btn">Begin a conversation</a><img src="./igm/Group (2).png" alt="" class="group2"></button></li>
+        </ul>
+    </section>
     <footer></footer>
 </body>
 </html>
