--- a/blog.html
+++ b/blog.html
@@ -80,7 +80,53 @@
             <div class=”card card_large”></div>
            </div>
     </section>
-    <footer></footer>
+    <footer class="footer">
+        <div class="footer-wrap">
+        <div class="footer-div">
+             <ul class="footer-list-one">
+                <li class="footer-list-item1">
+                    <p href="./index.html" class="footer-main">Joi</p>
+                    <p class="footer-main-para"><mark class="mark1">Dynamic, versatile</mark> AI models in sight.</p>
+               </li>
+               <li>
+                <div class="footer-img-list">
+                    <a href="https://discord.com/" class="footer-img" target="blank"> <img src="./igm/logo-discord.svg" alt="" class="footer-img"></a>
+                    <a href="https://www.facebook.com/" class="footer-img" target="blank"> <img src="./igm/logo-social-media-facebook-circle.svg" alt="" class="footer-img"></a>
+                    <a href="https://www.instagram.com/?hl=en%22" class="footer-img" target="blank"> <img src="./igm/logo-social-media-instagram.svg" alt="" class="footer-img"></a>
+                    <a href="https://x.com/" class="footer-img" target="blank"> <img src="./igm/logo-twitter.svg" alt="" class="footer-img"></a>
+                </div>
+               </li>
+             </ul>
+            <div class="footer-wrapper">
+              <ul class="footer-list2">
+                <li class="list-header"><p>Pages</p></li>
+                <li class="list-item"><a href="./nodirectory.html" class="deadend-link">Style guide</a></li>
+                <li class="list-item"><a href="./nodirectory.html" class="deadend-link">Protected</a></li>
+                <li class="list-item"><a href="./nodirectory.html" class="deadend-link">Licenses</a></li>
+                <li class="list-item"><a href="./nodirectory.html" class="deadend-link">Changelog</a></li>
+                <li class="list-item"><a href="./nodirectory.html" class="deadend-link">404</a></li>
+              </ul>
+              <ul class="footer-list3">
+                <li class="list-header"><p>Explore</p></li>
+                <li class="list-item"><a href="./nodirectory.html" class="deadend-link">About us</a></li>
+                <li class="list-item"><a href="./nodirectory.html" class="deadend-link">Recent blog</a></li>
+                <li class="list-item"><a href="./nodirectory.html" class="deadend-link">Pricing plan</a></li>
+                <li class="list-item"><a href="./nodirectory.html" class="deadend-link">Our projects</a></li>
+                <li class="list-item"><a href="./nodirectory.html" class="deadend-link">Contact us</a></li>
+              </ul>
+              <ul class="footer-list4">
+                <li class="list-header"><p>Contact</p></li>
+                <li class="list-item"><a href="./nodirectory.html" class="deadend-link">Musterstraße 3a</a></li>
+                <li class="list-item"><a href="./nodirectory.html" class="deadend-link">contact@joi.com</a></li>
+                <li  class="list-item"><a href="./nodirectory.html" class="deadend-link">(123) 456 - 7890</a></li>
+              </ul>
+        </div>
+        </div>
+        <div class="footer-copyright">
+            <p class="copyright-para">Copyright 2025 © JOI | Designed by <span class="mark1">Erik Eriksson</span>  Templates - Powered by <span class="footer-span">(insert favourite company)</span></p>
+        </div>
+    </div>
+    </footer>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
