--- a/blog.html
+++ b/blog.html
@@ -75,7 +75,7 @@
         </header>
     <section class="pins">
         <div class=”pin_container”>
-            <div class=”card card_small”></div>
+            <div class=”card card_small”><img src="./igm/" alt=""></div>
             <div class=”card card_medium”></div>
             <div class=”card card_large”></div>
            </div>
