--- a/blog.html
+++ b/blog.html
@@ -76,7 +76,7 @@
     <section class="pins">
         <div class=”pin_container”>
             <div class=”card card_small”><img src="./igm/" alt=""></div>
-            <div class=”card card_medium”></div>
+            <div class=”card card_medium”><img src="" alt=""></div>
             <div class=”card card_large”></div>
            </div>
     </section>
