--- a/blog.html
+++ b/blog.html
@@ -77,7 +77,7 @@
         <div class=”pin_container”>
             <div class=”card card_small”><img src="./igm/" alt=""></div>
             <div class=”card card_medium”><img src="" alt=""></div>
-            <div class=”card card_large”></div>
+            <div class=”card card_large”><img src="" alt=""></div>
            </div>
     </section>
     <footer class="footer">
