--- a/blog.html
+++ b/blog.html
@@ -75,9 +75,9 @@
         </header>
     <section class="pins">
         <div class=”pin_container”>
-            <div class=”card card_small”><img src="./igm/" alt=""></div>
-            <div class=”card card_medium”><img src="" alt=""></div>
-            <div class=”card card_large”><img src="" alt=""></div>
+            <div class=”card card_small”><img src="./igm" alt=""></div>
+            <div class=”card card_medium”><img src="./img" alt=""></div>
+            <div class=”card card_large”><img src="./igm" alt=""></div>
            </div>
     </section>
     <footer class="footer">
