--- a/blog.html
+++ b/blog.html
@@ -75,9 +75,9 @@
         </header>
     <section class="pins">
         <div class=”pin_container”>
-            <div class=”card card_small”><img src="./igm/pexels-isaquepereira-394377.jpg" alt=""></div>
-            <div class=”card card_medium”><img src="./igm/pexels-markusspiske-1343537.jpg" alt=""></div>
-            <div class=”card card_large”><img src="./igm/pexels-kaip-704913.jpg" alt=""></div>
+            <div class=”card card_small”><img class="card-img" src="./igm/pexels-isaquepereira-394377.jpg" alt=""></div>
+            <div class=”card card_medium”><img class="card-img" src="./igm/pexels-markusspiske-1343537.jpg" alt=""></div>
+            <div class=”card card_large”><img class="card-img" src="./igm/pexels-kaip-704913.jpg" alt=""></div>
            </div>
     </section>
     <footer class="footer">
