--- a/blog.html
+++ b/blog.html
@@ -74,7 +74,7 @@
         </div>
         </header>
     <section class="pins">
-        <div class=”pin_container”>
+        <div class=”pin-container”>
             <div class=”card card_small”><img class="card-img" src="./igm/pexels-isaquepereira-394377.jpg" alt=""></div>
             <div class=”card card_medium”><img class="card-img" src="./igm/pexels-markusspiske-1343537.jpg" alt=""></div>
             <div class=”card card_large”><img class="card-img" src="./igm/pexels-kaip-704913.jpg" alt=""></div>
