--- a/deployment.html
+++ b/deployment.html
@@ -75,9 +75,9 @@
         </header>
     <section class="models">
         <ul class="models-list">
-            <li><button class="btn-1"><a href="./chat.html" class="convers-btn">Begin a conversation</a><img src="./igm/Group (2).png" alt="" class="group2"></button></li>
-            <li><button class="btn-1"><a href="./chat.html" class="convers-btn">Begin a conversation</a><img src="./igm/Group (2).png" alt="" class="group2"></button>            </li>
-            <li><button class="btn-1"><a href="./chat.html" class="convers-btn">Begin a conversation</a><img src="./igm/Group (2).png" alt="" class="group2"></button></li>
+            <li><button class="btn-1"><img src="./igm/Group (2).png" alt="" class="models-img"><a href="./chat.html" class="convers-btn">Joi</a></button></li>
+            <li><button class="btn-1"><a href="./chat.html" class="convers-btn">Arete</a><img src="./igm/Group (2).png" alt="" class="group2"></button>            </li>
+            <li><button class="btn-1"><a href="./chat.html" class="convers-btn">Joi 3</a><img src="./igm/Group (2).png" alt="" class="group2"></button></li>
         </ul>
     </section>
     <footer class="footer">
