--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
     <section class="mission">
     <h1 class="mission-header">Our Mission</h1>
     <p class="mission-para">
-        Joi is built to give users <mark class="mark1">control over their digital assistant</mark> without sacrificing security or performance. Our goal is to push the boundaries of what a homebuilt AI can achieve, one interaction at a time.</p>
+        JOI is built to give users <mark class="mark1">control over their digital assistant</mark> without sacrificing security or performance. Our goal is to push the boundaries of what a homebuilt AI can achieve, one interaction at a time.</p>
     </section>
     <div class="cursor"></div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
