--- a/dev.html
+++ b/dev.html
@@ -79,7 +79,7 @@
             <div class="quote-inner-wrapper">
                 <div class="quote-inner-inner-wrapper">
                 <img src="./igm/Quote Left.svg" alt="" class="quote-left">
-                <h1 class="quote-text">Why do something manually <br>when you can spend months automating it?</h1>
+                <h1 class="quote-text">Why do something <span class="special-bg">manually</span> <br>when you can spend months <span class="special-bg">automating</span> it?</h1>
                 <img src="./igm/Quote Right.svg" alt="" class="quote-right">
             </div>
          <!-- <p class="quote-author">~ The Dev at some point</p> -->
