--- a/dev.html
+++ b/dev.html
@@ -75,6 +75,7 @@
         </header>
     
     <section class="quote">
+        <div class="idk-wrapper">
         <div class="quote-wrapper">
             <div class="quote-inner-wrapper">
                 <div class="quote-inner-inner-wrapper">
@@ -98,12 +99,14 @@
            </div>
 
            <div class="about-wrapper5">
-            <h1 class="wrapper5-para">GitHub account:</h1>
-            <a href="https://github.com/Mel-b3002fA" class="wrapper5-link" target="_blank">Erik Eriksson</a>
+              <h1 class="wrapper5-para">GitHub account:</h1>
+              <a href="https://github.com/Mel-b3002fA" class="wrapper5-link" target="_blank">Erik Eriksson</a>
+              </div>
            </div>
         </div>
     </div>
     </section> 
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <footer class="footer footer-dev">
         <div class="footer-div">
