--- a/dev.html
+++ b/dev.html
@@ -97,11 +97,11 @@
                 <h1 class="wrapper4-main">Brussel</h1>
            </div>
 
-           <div class="about-wrapper5">
+           <!-- <div class="about-wrapper5">
               <h1 class="wrapper5-para">GitHub account:</h1>
               <a href="https://github.com/Mel-b3002fA" class="wrapper5-link" target="_blank">Erik Eriksson</a>
               </div>
-           </div>
+           </div> -->
         </div>
     </div>
     </section> 
